Fix resume margins, add extra gap to multi layouts

--- a/resume.css
+++ b/resume.css
@@ -13,6 +13,12 @@ h1 {
   font-weight: bold;
   font-size: 12pt;
   text-transform: uppercase;
+
+  margin-bottom: 0px;
+}
+
+p {
+  margin-top: 0px;
 }
 
 .name > p {
