--- a/styles/layout-half.css
+++ b/styles/layout-half.css
@@ -1,3 +1,4 @@
 body {
   column-count: 2;
+  column-gap: 0.3in;
 }
