--- a/styles/layout-quarter.css
+++ b/styles/layout-quarter.css
@@ -1,3 +1,4 @@
 body {
   column-count: 4;
+  column-gap: 0.3in;
 }
